<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="vertical"
        android:layout_toLeftOf="@+id/more_options_button">

        <TextView
            android:id="@+id/ingredient_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textStyle="bold"

            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="40"
            android:visibility="gone">

            <TextView
                android:id="@+id/kcal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/kcal_no_colon"
                android:textSize="15sp"
                android:layout_weight="10"/>

            <TextView
                android:id="@+id/protein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/protein"
                android:textSize="15sp"
                android:layout_weight="10"/>

            <TextView
                android:id="@+id/sugar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/sugar"
                android:textSize="15sp"
                android:layout_weight="10"/>

            <TextView
                android:id="@+id/fat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/fat"
                android:textSize="15sp"
                android:layout_weight="10"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/more_options_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:background="#00018786"
        android:gravity="center"
        android:text="E"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />
</RelativeLayout>