<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/add_recipe"
        android:textColor="#4CB963"
        android:textSize="25sp"
        android:background="#26314A"
        android:fontFamily="@font/lobster"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".activities.AddRecipeActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/green"
                android:hint="@string/recipe_name" />

            <Spinner
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:entries="@array/category"
                android:popupBackground="@drawable/gradient_background"
                android:layout_marginBottom="10dp"
                android:spinnerMode="dialog" />

            <EditText
                android:id="@+id/general_desc"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="left|top"
                android:layout_marginBottom="10dp"

                android:hint="@string/general_desc" />

            <Button
                android:id="@+id/subcategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_subcategory"
                android:textSize="10dp"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/diff"
                    android:textSize="17dp" />

                <Spinner
                    android:id="@+id/difficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:entries="@array/difficulty"
                    android:popupBackground="@drawable/gradient_background"
                    android:spinnerMode="dialog" />

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tint="@color/green"
                    android:src="@drawable/portion"></ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/portion_quantity"
                    android:padding="5dp"
                    android:textSize="17dp" />

                <EditText
                    android:id="@+id/portion"
                    android:layout_width="70dp"
                    android:inputType="number"
                    android:background="@drawable/round_grey"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/timer"
                    android:tint="@color/green">
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/time"
                    android:padding="5dp"
                    android:textSize="17dp" />

                <EditText
                    android:id="@+id/time"
                    android:layout_width="70dp"
                    android:inputType="number"
                    android:hint="@string/min"
                    android:gravity="center"
                    android:background="@drawable/round_grey"
                android:layout_height="match_parent" />

            </LinearLayout>



            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />


        </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lista składników:"
                android:textSize="30sp"
                android:padding="5dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ingredients_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:background="@drawable/round_grey"
                android:padding="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_ingredients_colon"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ingredients_items_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

                <Button
                    android:id="@+id/main_ingredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:gravity="left|center"
                    android:text="@string/add_new_main_ingredient"
                    android:textColor="@color/green"
                    android:textSize="10sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_ingredients_colon"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/optional_ingredients_items_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

                <Button
                    android:id="@+id/subIngredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:gravity="left|center"
                    android:textColor="@color/green"
                    android:text="@string/add_new_sub_ingredient"
                    android:textSize="10sp"
                    android:textStyle="italic" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Kroki:"
                android:textSize="30sp"
                android:padding="5dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/steps_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/steps_rv"
                    android:layout_width="match_parent"
                    android:padding="5dp"
                    android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>

                <Button
                    android:id="@+id/step"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/add_step" />

            </LinearLayout>
            <Button
                android:id="@+id/add_recipe"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/add_recipe" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</LinearLayout>